--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -6,11 +6,14 @@
     "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.4.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "dotenv-webpack": "^7.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.35.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -22,7 +25,6 @@
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
